2019-08-01 Magnus Hagdorn
 * piccolo3/common/__init__.py: load new module
 * piccolo3/common/PiccoloScheduler.py: add enum for recording status of
   scheduled jobs

2019-05-11 Magnus Hagdorn
 * piccolo3/common/PiccoloSpectra.py: use new method to compute wavelengths

2019-05-08 Magnus Hagdorn
 * piccolo3/common/PiccoloSpectra.py: add new method to get wavelengths as a
   numpy array

2019-05-08 Magnus Hagdorn
 * piccolo3/common/PiccoloSpectra.py: add method to apply non-linearity
   correction

2019-03-05 Magnus Hagdorn
 * piccolo3/common/__init__.py: loadd new module
 * piccolo3/common/piccoloLogging.py: move logging module from server

2019-02-22 Magnus Hagdorn
 * setup.py: require numpy
 * data/example.pico: add an example spectra file
 * piccolo3/common/PiccoloSpectra.py: add module to handle spectra
 * piccolo3/common/__init__.py: load spectra module

2019-02-22 Magnus Hagdorn
 * start piccolo3-common